Fix table header font size; hide team name + shrink col on mobile in matchday
- hall-of-fame: scope col-points font-size/weight to td only so th renders at normal size
- matchday: hide team name on mobile, shrink td via width:1px on col-team (child width has no effect on table cell sizing)

--- a/webapp/src/app/hall-of-fame/hall-of-fame.component.scss
+++ b/webapp/src/app/hall-of-fame/hall-of-fame.component.scss
@@ -13,9 +13,12 @@
 .col-points {
   width: 80px;
   text-align: right;
+  font-variant-numeric: tabular-nums;
+}
+
+td.col-points {
   font-weight: $font-weight-semibold;
   font-size: $font-md;
-  font-variant-numeric: tabular-nums;
 }
 
 .rank {
